# blackWolf

./: Actions.hpp  Application.cpp  Application.hpp  BlackWolf.cpp  BlackWolf.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Console.cpp  Console.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  LICENSE  NetWidgets.cpp  NetWidgets.hpp  README.md  README.txt  Resources.cpp  Resources.hpp  Timeseal.cpp  Timeseal.hpp  blackWolf.cpp  blackWolf.h  blackWolf.inl  boardcanvas.cpp  boardcanvas.h  boardmaster.cpp  boardmaster.h  boardmove.cpp  boardmove.h  boardstate.cpp  boardstate.h  chessWolf.pro  chessengine.cpp  chessengine.h  client.cpp  client.h  clocksview.cpp  (+30 more)
Common/: Color.cpp  Color.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  PieceToTexPos.cpp  PieceToTexPos.hpp  Square.cpp  Square.hpp
common/: CompleteMove.cpp  CompleteMove.hpp  Position.cpp  Position.hpp  PseudoMove.cpp  PseudoMove.hpp  boardmove.cpp  boardmove.h  completemove.cpp  completemove.h  position.cpp  position.h
components/: buttonbox.cpp  buttonbox.h  sidechoicewindow.cpp  sidechoicewindow.h
controller/: BoardMaster.cpp  BoardMaster.hpp  Controller.cpp  Controller.hpp  boardmaster.cpp  boardmaster.h
controller/components/: ButtonBox.cpp  ButtonBox.hpp  ColorChoices.cpp  ColorChoices.hpp  Settings.cpp  Settings.hpp  settingsstate.cpp  settingsstate.h  sidechoicewindow.cpp  sidechoicewindow.h
generators/: MoveStringGrammar.hpp
messages/: Entity.cpp  Entity.hpp  GameEnd.cpp  GameEnd.hpp  GameStart.cpp  GameStart.hpp  GameState.cpp  GameState.hpp  Message.cpp  Message.hpp  TextReady.cpp  TextReady.hpp  TextToClient.cpp  TextToClient.hpp
model/: GameData.cpp  GameData.hpp  gamedata.cpp  gamedata.h
parsers/: GameEndParser.hpp  GameStartParser.hpp  GameStateParser.cpp  GameStateParser.hpp  SquareParser.cpp  SquareParser.hpp
resources/: blackwolf.theme  gui.theme
tests/: GameEnd.cpp  GameStart.cpp  GameState.cpp  MoveString.cpp  SessionStart.cpp  Square.cpp  tests.cpp
views/: Canvas.cpp  Canvas.hpp  Clock.cpp  Clock.hpp  Clocks.cpp  Clocks.hpp  EngineAnalysis.cpp  EngineAnalysis.hpp  Grid.cpp  Grid.hpp  MoveList.cpp  MoveList.hpp  Status.cpp  Status.hpp  boardcanvas.cpp  boardcanvas.h  clocksview.cpp  clocksview.h  moveview.cpp  moveview.h  statusview.cpp  statusview.h
views/components/: Emitter.cpp  Emitter.hpp  Firework.cpp  Firework.hpp  PieceSprite.cpp  PieceSprite.hpp  firework.cpp  firework.h  piecesbimap.cpp  piecesbimap.h  piecesprite.cpp  piecesprite.h
